# AVT

./: .gitignore  README.md  pyproject.toml
avt/: __init__.py  cli.py  config.py  inverse.py  io.py  querying.py  reliability.py  schema.py  viewer.py
avt/detectors/: __init__.py  base.py  config.py  orb.py  sift.py  superpoint.py  xfeat.py
avt/pipeline/: __init__.py  combine.py  extract.py  preprocess.py  track.py
avt/tracking/: __init__.py  base.py  cotracker.py  cotracker_cache.py  lk.py
avt/tracking/bootstap/: __init__.py  backend.py  config.py  download.py
avt/tracking/foundationpose/: __init__.py  backend.py  download.py
configs/: bootstap.yaml  cotracker_cache.yaml  virtual_robot.yaml  virtual_robot_every_frame.yaml
scripts/: run_top10_cache_chunks.py
tests/: test_detectors.py  test_inverse_viewer.py  test_pipeline_stages.py
