[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avt"
version = "0.1.0"
description = "Decoupled inverse-video point tracking and static WebUI visualization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "opencv-python>=4.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
cotracker = [
  "torch>=2.0",
  "torchvision>=0.15",
]
foundationpose = [
  "torch>=2.0",
  "torchvision>=0.15",
  "huggingface-hub>=0.20",
]
bootstap = [
  "torch>=2.0",
  "torchvision>=0.15",
  "tapnet @ git+https://github.com/google-deepmind/tapnet.git",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
avt = "avt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["avt*"]
